--- a/app/views/search/_search_box.html.erb
+++ b/app/views/search/_search_box.html.erb
@@ -13,7 +13,7 @@
     <br>
   <div class="row">
     <div id="control-buttons1" class="col s12">
-      <button class="waves-effect grey darken-4 orange-text btn-large z-depth-3 modal-trigger left" style="border-radius: 20px; 20px; width: 175px;" data-target="modal1">Add A Tank</button>
+      <button class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;" data-target="modal1">Add A Tank</button>
       <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
     </div>
   </div>
