fix stars and grid

--- a/app/views/user/dashboard/show.html.erb
+++ b/app/views/user/dashboard/show.html.erb
@@ -1,7 +1,8 @@
 <h1 class="white-text">Welcome <%= current_user.name %></h1>
 
+</div>
 <div class="row">
-  <div class="col s6 right">
+  <div class="col s5 right">
     <div class="grey darken-3 card large" style="border-radius: 20px">
       <div class="card-content z-depth-3">
         <%= render "/search/search_box" %>
@@ -28,7 +29,7 @@
          <div id="tank-options" class="card-action z-depth-3 grey darken-3" style="border-radius: 20px;">
            <%= link_to "Tank Details", user_tank_path(tank), class: "waves-effect grey darken-4 orange-text btn", style: "border-radius: 20px"%>
            <%= link_to "Enter Parameters", user_tank_water_parameters_path(tank), class: "waves-effect grey darken-4 orange-text btn", style: "border-radius: 20px", href: "#modal3" %>
-           <button class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;" data-target="modal2">Add a Fish</button>
+           <button class="waves-effect grey darken-4 orange-text btn z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;" data-target="modal2">Add a Fish</button>
            <%#= link_to "Add a Fish", "", class: "waves-effect grey darken-4 orange-text btn", style: "border-radius: 20px", href: "#modal2"%>
 
          </div>
@@ -39,7 +40,6 @@
            <p><%= tank.description %></p>
          </div>
        </div>
-     </div>
      <div id="modal1" class="modal grey darken-3" style="border-radius: 20px">
        <div class="modal-content">
          <h4 class="orange-text">New Tank</h4>
@@ -106,6 +106,7 @@
        </div>
        <br><br>
        <% end %>
+     </div>
      </div>
 
    <% end %>
