add chart to page. not dynamic yet.

--- a/app/views/search/_search_box.html.erb
+++ b/app/views/search/_search_box.html.erb
@@ -5,31 +5,30 @@
       <label class="label-icon" for="search"><i class="material-icons">search</i></label>
       <i class="material-icons">close</i>
     </div>
-      <input id="submit" type="submit" class="btn btn-large orange-text  grey darken-4 z-depth-4" style="border-radius: 20px; width: 175px;" >
-      <%= link_to "Near Me", stores_path, class: "btn btn-large orange-text  grey darken-4 z-depth-4 right", style: "border-radius: 20px; 20px; width: 175px;"%>
+      <input id="submit" type="submit" class="btn btn orange-text  grey darken-4 z-depth-4" style="border-radius: 20px; width: 175px;" >
+      <%= link_to "Near Me", stores_path, class: "btn btn orange-text  grey darken-4 z-depth-4 right", style: "border-radius: 20px; 20px; width: 175px;"%>
   </form>
   <br>
     <div class="divider"></div>
     <br>
   <div class="row">
     <div id="control-buttons1" class="col s12">
-      <button class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;" data-target="modal1">Add A Tank</button>
-      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
+      <button class="waves-effect grey darken-4 orange-text btn z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;" data-target="modal1">Add A Tank</button>
+      <a class="waves-effect grey darken-4 orange-text btn z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;" href="#modal1">Add A Tank</a>
     </div>
   </div>
     <div class="divider"></div>
     <br>
   <div class="row">
     <div id="graph-ph-ammonia" class="col s12">
-      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Ph</a>
-      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a></br>
+      <a class="waves-effect grey darken-4 orange-text btn z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Ph</a>
+      <a class="waves-effect grey darken-4 orange-text btn z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a></br>
     </div>
   </div>
 
   <div class="row">
     <div id="graph-ph" class="col s12">
-      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Nitrates</a>
-      <a class="waves-effect grey darken-4 orange-text btn-large z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Temperature</a>
+      <a class="waves-effect grey darken-4 orange-text btn z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Nitrates</a>
+      <a class="waves-effect grey darken-4 orange-text btn z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Temperature</a>
     </div>
   </div>
-  <br><br>
