--- a/app/views/search/_search_box.html.erb
+++ b/app/views/search/_search_box.html.erb
@@ -21,7 +21,7 @@
     <br>
   <div class="row">
     <div id="graph-ph-ammonia" class="col s12">
-      <a class="waves-effect grey darken-4 orange-text btn z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Ph</a>
+      <a id="ph-button" class="waves-effect grey darken-4 orange-text btn z-depth-3 left" style="border-radius: 20px; 20px; width: 175px;">Ph</a>
       <a class="waves-effect grey darken-4 orange-text btn z-depth-3 right" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a></br>
     </div>
   </div>
