--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
   </ul>
   <div class="navbar-fixed">
     <nav>
-      <a href="/dashboard/<%= current_user.id %>" class="brand-logo center">Tank Man</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="left valign-wrapper hide-on-med-and-down">
+        <li><a href="/dashboard/<%= current_user.id %>">Tank Man</a></li>
         <li><a href=<%= stores_path %>>Stores</a></li>
         <li><a href="badges.html">Community</a></li>
       </ul>
@@ -51,6 +51,15 @@
         <% end %>
       <% end %>
     </div>
+    <form action='/near_by_stores' method='get' style="margin-left: 20px; width: 400px;">
+      <div class="input-field card">
+        <input id="search" type="search" name="zipcode" placeholder="Enter Zipcode and Press Enter" required>
+        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        <i class="material-icons">close</i>
+      </div>
+        <%= link_to "Find Stores Near Me", stores_path, class: "btn btn orange-text  grey darken-4 z-depth-4", style: "border-radius: 20px; 20px;"%>
+    </form>
+    <br><br>
     <div class="container">
       <body>
         <%= yield %>
