fix graph duplication when clicking on same button multiple times

--- a/app/views/user/tanks/show.html.erb
+++ b/app/views/user/tanks/show.html.erb
@@ -7,6 +7,7 @@
 
 <br><br>
 
+<h4 class="white-text">Water Parameters</h4>
 <div class="row">
   <div id="button-group" class="col s12">
     <a id="ph-button" class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;" onclick="getPh()">Ph</a>
@@ -18,9 +19,7 @@
 
 <div class="row">
   <div class="col s12">
-    <div class="center z-depth-4">
-      <div id="ph-graph"  class="center"></div>
-    </div>
+    <div id="ph-graph"  class="center z-depth-4"></div>
   </div>
 </div>
 
@@ -36,7 +35,6 @@
           <span class="card-title activator grey-text text-darken-4"><%= fish.name %><i class="material-icons right">more_vert</i></span>
           <p>Breed: <%= fish.breed %> </p>
           <p>Temperament: <%= fish.temperament %> </p>
-
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
