--- a/app/views/user/tanks/show.html.erb
+++ b/app/views/user/tanks/show.html.erb
@@ -1,18 +1,80 @@
-
-<h3><%= @tank.name %></h3>
-<%= @tank.size %>
-<%= @tank.style %>
 <div class="row">
-  <div class="col s12">
-    <div class="col s12 left card z-depth-4">
-      <div id="ph-graph"  class="center"></div>
-    </div>
+  <div class="col s9 right">
+    <img class="materialboxed" width="100%" src="<%= @tank.image_url %>" style="border-radius: 20px; 20px; z-depth-3; border: 10px double black;">
   </div>
-  <div class="col s6 right">
-    <div class="grey darken-3 card large" style="border-radius: 20px">
-      <div class="card-content z-depth-3">
-        <%= render "/search/graph_box.html.erb" %>
+  <div class="col s3 left">
+    <div class="card large z-depth-3" style=" background-color:rgba(0, 0, 0, 0.5); border-radius: 20px; 20px;">
+      <br><br>
+      <h3 class="white-text center"><%= @tank.name %></h3>
+      <h5 class="white-text center"><%= @tank.size %> Gallons</h5>
+      <h5 class="white-text center"><%= @tank.style %></h5>
+      <br><br>
+      <div class="center">
+        <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Add Fish</a>
+        <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Add Params</a>
       </div>
     </div>
   </div>
 </div>
+
+<br><br>
+
+<h4 class="white-text">Water Parameters</h4>
+<div class="row">
+  <div id="button-group" class="col s12">
+    <a id="ph-button" class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;" onclick="getPh()">Ph</a>
+    <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a>
+    <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Nitrates</a>
+    <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Temperature</a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <div id="ph-graph"  class="center z-depth-4"></div>
+  </div>
+</div>
+
+<h4 class="white-text">Tankmates</h4>
+<div class="row">
+  <% @tank.fish.each do |fish| %>
+    <div class="col s4 m4">
+      <div class="card z-depth-3" style="border-radius: 20px; 20px;">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="<%= fish.image_url %>" style="width: 100%; height: 250px; border-radius: 20px;">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4"><%= fish.name %><i class="material-icons right">more_vert</i></span>
+          <p>Breed: <%= fish.breed %> </p>
+          <p>Temperament: <%= fish.temperament %> </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Fish Info<i class="material-icons right">close</i></span>
+          <p class="grey-text">Scroll down for more information</p>
+          <p>Description: <%= fish.description %></p>
+          <form action="/fish/<%= fish.id %>/notes" method="post">
+            <input type="text" name="note" placeholder="Type Note Here"><br>
+            <input type="hidden" name="" value="<%= fish.id %>">
+            <input type="submit" value="Add Note">
+          </form>
+          <br><br>
+          <% fish.notes.each do |note| %>
+            <%= note.created_at.strftime("%D") %><br>
+            <%= note.body %>
+            <br><br>
+          <% end %>
+        </div>
+        <div class="card-action" style="border-radius: 20px; 20px;">
+          <%= link_to "Delete Fish", user_tank_fish_path(@tank.id, fish.id), method: :delete %>
+          <%= link_to "Move Fish", "", method: :put %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<!-- <script type="text/javascript">
+$( document ).ready(function() {
+    getPh();
+});
+</script> -->
