add endpoint for ammonia readings. add graph for ammonia on tank show page.

--- a/app/views/user/dashboard/show.html.erb
+++ b/app/views/user/dashboard/show.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="col s6 left card z-depth-4">
-    <div id="ph-graph"  class="center"></div>
+    <div id="graph"  class="center"></div>
   </div>
 </div>
 
