--- a/app/views/user/tanks/show.html.erb
+++ b/app/views/user/tanks/show.html.erb
@@ -23,7 +23,7 @@
 <div class="row">
   <div id="button-group" class="col s12">
     <a id="ph-button" class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;" onclick="getPh()">Ph</a>
-    <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Ammonia</a>
+    <a id="ammonia-button" class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;" onclick="getAmmonia()">Ammonia</a>
     <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Nitrates</a>
     <a class="waves-effect grey darken-4 orange-text btn z-depth-3" style="border-radius: 20px; 20px; width: 175px;">Temperature</a>
   </div>
@@ -31,7 +31,7 @@
 
 <div class="row">
   <div class="col s12">
-    <div id="ph-graph"  class="center z-depth-4"></div>
+    <div id="graph"  class="center z-depth-4"></div>
   </div>
 </div>
 
